--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./app.js"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.3.0",
     "koa": "^2.3.0",
     "koa-onerror": "^3.1.0",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -23,6 +25,8 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "koa-webpack": "^1.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
