--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "release": "gulp",
+    "pm2_start": "pm2 start pm2.json"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
     "koa": "^2.3.0",
+    "koa-body": "^2.3.0",
     "koa-onerror": "^3.1.0",
+    "koa-router": "^7.2.1",
+    "koa-static": "^4.0.1",
+    "request": "^2.81.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
@@ -21,12 +27,18 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.4",
+    "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "gulp": "^3.9.1",
+    "gulp-gzip": "^1.4.0",
+    "gulp-shell": "^0.6.3",
+    "gulp-tar": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
     "koa-webpack": "^1.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
