--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "koa-static": "^4.0.1",
     "request": "^2.81.0",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
