--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "element-ui": "^1.4.4",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
     "koa-onerror": "^3.1.0",
