--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["es2015","stage-0"],
-  "plugins": ["transform-runtime"],
+  "presets": [
+    "es2015",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-runtime",
+    "transform-vue-jsx"
+  ],
   "comments": false
 }
