--- a/package.json
+++ b/package.json
@@ -1,51 +1,84 @@
 {
-  "name": "vue2-koa2-demo",
+  "name": "webpack4-vue2-mobile-demo",
   "version": "1.0.0",
-  "private": true,
+  "author": "kid",
+  "license": "ISC",
   "scripts": {
-    "start": "node ./app.js",
-    "release": "gulp",
-    "pm2_start": "pm2 start pm2.json"
+    "pm2-start": "pm2 start pm2.json",
+    "start:dev": "node app",
+    "start:prod": "cross-env NODE_ENV=production pm2 start app.js --watch --name $npm_package_name",
+    "prod": "NODE_ENV=production pm2 start app.js --watch --name $npm_package_name",
+    "build-dist": "webpack --config build/webpack.prod.config",
+    "remove-dist": "shx rm -rf build/dist",
+    "prebuild": "yarn || npm i && shx rm -rf pkg && shx rm -rf build_temp && shx mkdir build_temp",
+    "build": "webpack --config build/webpack.prod.config",
+    "postbuild": "shx mv build/dist build_temp & npm run cp-files && cd build_temp && yarn install --production && yarn run compressing",
+    "cp-files": "shx cp -r {config,middleware,app.js,favicon.ico,package.json,pm2.json,yarn.lock} build_temp",
+    "compressing": "cd .. && node compress",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": "eslint"
   },
   "dependencies": {
-    "connect-history-api-fallback": "^1.3.0",
-    "element-ui": "^1.4.4",
-    "isomorphic-fetch": "^2.2.1",
-    "koa": "^2.3.0",
-    "koa-body": "^2.3.0",
-    "koa-onerror": "^3.1.0",
-    "koa-router": "^7.2.1",
-    "koa-static": "^4.0.1",
-    "request": "^2.81.0",
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.0"
+    "connect-history-api-fallback": "^1.5.0",
+    "koa": "^2.4.1",
+    "koa-body": "2.0.1",
+    "koa-favicon": "^2.0.0",
+    "koa-static-cache": "^5.1.1",
+    "request": "^2.83.0",
+    "uuid": "^3.3.2",
+    "vue": "^2.5.17",
+    "vue-fetch-plugin": "^1.1.4",
+    "vue-loader": "^15.4.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.1",
+    "babel-eslint": "^8.2.6",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-component": "^0.10.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.4",
-    "del": "^3.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "gulp": "^3.9.1",
-    "gulp-gzip": "^1.4.0",
-    "gulp-shell": "^0.6.3",
-    "gulp-tar": "^2.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "koa-webpack": "^1.0.0",
-    "less": "^2.7.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "compressing": "^1.3.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^0.14.3",
+    "koa-webpack": "3.0.0",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.5",
-    "webpack-merge": "^4.1.0"
+    "lint-staged": "^7.2.2",
+    "mini-css-extract-plugin": "^0.4.2",
+    "mkdirp": "^0.5.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^4.0.1",
+    "rimraf": "2.6.1",
+    "shx": "^0.3.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
+    "vue-html-loader": "^1.2.4",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.1"
   }
 }
